# mausoleum

./: .gitignore  CREDITS.md  Cargo.toml  Makefile  README.md  prepare.sh
asset/: cavern_0.tmx  corridor_0.tmx  corridor_1.tmx  desolation_pulse.xcf  grunt.xcf  metroidvania.tiled-project  plasma_burst.xcf  propertytypes.json  room_0.tmx  room_1.tmx  room_2.tmx  room_3.tmx  room_4.tmx  save_0.tmx  save_1.tmx  save_2.tmx  shaft_0.tmx  shaft_1.tmx  spore.xcf  spore_cell.xcf  test.xcf  tileset.tsx  tileset.xcf  world.world  zoomer.xcf
asset/area_0/: cavern_0.tmx  corridor_0.tmx  corridor_1.tmx  room_2.tmx  save_0.tmx  save_1.tmx  save_2.tmx  shaft_0.tmx  shaft_1.tmx
asset/area_1/: area_1.world  basin_0.tmx  basin_1.tmx  basin_2.tmx  basin_3.tmx  basin_4.tmx  basin_5.tmx  basin_7.tmx  cavern_0.tmx  cavern_1.tmx  cavern_10.tmx  cavern_2.tmx  cavern_3.tmx  cavern_4.tmx  cavern_5.tmx  cavern_6.tmx  cavern_7.tmx  cavern_8.tmx  cavern_9.tmx  finale_0.tmx  high_jump_0.tmx  ice_beam_0.tmx  lush_0.tmx  lush_1.tmx  lush_2.tmx  lush_3.tmx  lush_4.tmx  lush_5.tmx  ruins_0.tmx  ruins_1.tmx  ruins_2.tmx  ruins_3.tmx  ruins_4.tmx  save_0.tmx  save_1.tmx  save_2.tmx  save_3.tmx  save_4.tmx  save_5.tmx  save_6.tmx  (+17 more)
asset/backdrop/: sky.xcf
asset/hud/: collectable_pane.xcf  cursor.xcf  help_pane.xcf  menu_pane.xcf  story_pane.xcf
asset/meta/: metroidvania.tiled-project  propertytypes.json
asset/sprite/: angry_buzz.xcf  angry_buzz_spit.xcf  bubbly.xcf  buzz.xcf  ripper.xcf  spiky.xcf  temporal_flare.xcf
asset/tileset/: tileset.tsx  tileset.xcf
asset/typography/: title.xcf
asset/world/: basin_0.tmx  basin_1.tmx  basin_2.tmx  basin_3.tmx  basin_4.tmx  basin_5.tmx  basin_6.tmx  basin_7.tmx  cavern_0.tmx  cavern_1.tmx  cavern_10.tmx  cavern_2.tmx  cavern_3.tmx  cavern_4.tmx  cavern_5.tmx  cavern_6.tmx  cavern_7.tmx  cavern_8.tmx  cavern_9.tmx  finale_0.tmx  high_jump_0.tmx  ice_beam_0.tmx  lush_0.tmx  lush_1.tmx  lush_2.tmx  lush_3.tmx  lush_4.tmx  lush_5.tmx  missile_0.tmx  ruins_0.tmx  ruins_1.tmx  ruins_2.tmx  ruins_3.tmx  ruins_4.tmx  save_0.tmx  save_1.tmx  save_10.tmx  save_2.tmx  save_4.tmx  save_5.tmx  (+21 more)
data/: collectable.json  credits.txt  dev_save.json  event.json  help.txt  story.json  weapon.json
src/: main.rs
src/engine/: application.rs  event.rs  geometry.rs  internal.rs  lifecycle.rs  mod.rs  scene.rs  state.rs  store.rs  subsystem.rs  system.rs  time.rs  world.rs
src/engine/asset/: asset.rs  audio.rs  mod.rs  texture.rs  typography.rs
src/engine/component/: animation.rs  mod.rs  position.rs  sprite.rs  text.rs  ui.rs
src/engine/core/: frame.rs  internal.rs  lifecycle.rs  mod.rs  scene.rs  subsystem.rs
src/engine/ecs/: system.rs  world.rs
src/engine/geometry/: collision.rs  mod.rs  shape.rs
src/game/: constant.rs  mod.rs  preferences.rs  room.rs
(+178 files in other folders)
