[package]
name = "mausoleum"
description = "A 2D metroidvania inspired platformer"
authors = ["aardhyn lavender"]
version = "0.7.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg", "unsafe_textures"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "53bef8994c541b6561884a8395ea35715ece75db"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[package.metadata.bundle]
name = "mausoleum"
identifier = "com.aardhyn.mausoleum"
version = "0.7.0"
short_description = "A 2D metroidvania inspired platformer"
authors = ["aardhyn lavender"]
copyright = "aardhyn lavender"
icon = ["asset/icon.png"]
resources = [
    "asset/*.ogg",
    "asset/*.ttf",
    "asset/*.png",
    "asset/*.tmx",
    "asset/*.tsx",
    "data/collectable.json",
    "data/story.json",
]
osx_frameworks = [
    "SDL2",
    "SDL2_image",
    "SDL2_ttf",
    "SDL2_mixer"
]

[dependencies]
hecs = "0.10.4"
num = "0.4.1"
quick-xml = { version = "0.32.0", features = ["serialize"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
regex = "1.10.4"
